--- a/Source/index.html
+++ b/Source/index.html
@@ -16,8 +16,19 @@
             <a href="">Flights</a>
             <a href="">Bookings</a>
             <a href="">login</a>
-            <a href=""><button>Sign Up</button></a>
-            <a href="">EN</a>
+            <a href=""><button class="btn_0">Sign Up</button></a>
+           <div class="dropdown">
+            <a href="" class="languages">EN 
+                <span class="drop_btn">
+                <img src="Asset/arrow_down_black.svg" alt="">
+                </span>
+            </a>
+                <div class="dropdown-content">
+                    <a href="#">En</a>
+                    <a href="#">Fn</a>
+                    <a href="#">Esp</a>
+                  </div>
+           </div>
            </div>
     </nav>
 
@@ -27,7 +38,7 @@
       <div class="hero">
          <p class="tagline">Best Destinations around the world</p>
             <h1 class="heading">
-               <span class="decore_text">Travel, enjoy ...</span> and live a new and full life
+               <span class="decore_text">Travel, enjoy</span> and live a new and full life
             </h1>
             <p class="desc">
                 Built Wicket longer admire do barton vanity itself do in it. Preferred to sportsmen it engrossed listening. Park gate sell they west hard for the.
@@ -54,9 +65,10 @@
                     <p class="">Built Wicket longer admire do barton vanity itself do in it.</p>
                 </div>
                 <div class="box two">
-                    <img src="asset/Group100.svg" alt="" class="vector avatar">
+                    <img src="asset/Group 49.svg" alt="" class="vector">
                     <h3 class="services-text">Best Flights</h3>
                     <p class="">Engrossed listening. Park gate sell they west hard for the.</p>
+                    <img src="Asset/Rectangle 157.svg" alt="" class="avatar">
                 </div>
                 <div class="box three">
                     <img src="asset/Group 50.svg" alt="" class="vector">
@@ -80,40 +92,40 @@
         <p class="">Top Selling</p>
         <h1 class="destinations_header">Top Destinations</h1>
        <div class="destinations">
-        <div class="card">
-            <img src="asset/Rectangle 15.svg" alt="">
-       <div class="card2">
-        <span class="">
+        <div class="card cardone">
+            <img src="asset/Rectangle 15.svg" alt="" class="trip">
+       <div class="card2 italy">
+        <span class="deals">
             <p class="">Rome, Italty</p>
             <p class="">$5,42k</p>
         </span>
-        <span>
+        <span class="destinations_length">
             <img src="asset/Vector.svg" alt="">
             <p class="">10 Days Trip</p>
         </span>
        </div>
         </div>
-        <div class="card">
-            <img src="asset/Rectangle 14.svg" alt="">
-            <div class="card2">
-                <span class="">
+        <div class="card cardtwo">
+            <img src="asset/Rectangle 14.svg" alt="" class="trip">
+            <div class="card2 london">
+                <span class="deals">
                     <p class="">London, UK</p>
                     <p class="">$4.2k</p>
                 </span>
-                <span>
+                <span class="destinations_length">
                     <img src="asset/Vector.svg" alt="">
                     <p class="">12 Days Trip</p>
                 </span>
             </div>
         </div>
         <div class="card cardthree">
-            <img src="asset/Rectangle 13.svg" alt="">
-         <div class="card2">
-            <span class="">
+            <img src="asset/Rectangle 13.svg" alt="" class="trip">
+         <div class="card2 europe">
+            <span class="deals">
                 <p class="">Full Europe</p>
                 <p class="">$15k</p>
             </span>
-            <span>
+            <span class="destinations_length">
                 <img src="asset/Vector.svg" alt="">
                 <p class="">28 Days Trip</p>
             </span>
