--- a/Source/index.html
+++ b/Source/index.html
@@ -137,10 +137,10 @@
 <!--  -->
 
     <div class="section_4">
-        <p class="">Easy and Fast</p>
-        <div class="">
-            <h1>Book your next trip in 3 easy steps</h1>   
-           <div class="">
+        <div class="values">
+            <p class="subheading4">Easy and Fast</p>
+            <h1 class="nexttrip_heading">Book your next trip in 3 easy steps</h1>   
+           <div class="value">
             <img src="asset/Group 7.svg" alt="">
             <span>
                 <h6>Choose Destination</h6>      
@@ -148,7 +148,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna, tortor tempus. </p>
             </span>
            </div>
-           <div class="">
+           <div class="value">
             <img src="asset/Group 12.svg" alt="">
             <span>
                 <h6>Make Payment</h6>      
@@ -156,7 +156,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna, tortor tempus. </p>
             </span>
            </div>
-           <div class="">
+           <div class="value">
             <img src="asset/Group 11.svg" alt="">
             <span>
                 <h6>Reach Airport on Selected Date</h6>      
@@ -169,47 +169,42 @@
         <img src="asset/Image1.svg" alt="">
       </div>
     </div>
+
+<!--  -->
+    
     <div class="section_5">
         <div class="">
-            <p class="">Testimonials</p>
-            <h1>What people say about Us.</h1>
+            <p class="subheading5">Testimonials</p>
+            <h1 class="heading5">What people say about Us.</h1>
            <span class="">
             <input type="radio">
             <input type="radio">
             <input type="radio">
            </span>
         </div>
+       <div class="testimonial_section">
         <div class="">
-            <img src="asset/Image3.svg" alt="">
-            <div class="">
-                <p class="">
+            <img src="asset/Image3.svg" alt="" class="testimonial_image">
+            <div class="testimonial">
+                <p class="testimonial_text">
                     “On the Windows talking painted pasture yet its express parties use. Sure last upon he same as knew next. Of believed or diverted no.”
                 </p>
-                <h6>Mike taylor</h6>
-                <p class="">Lahore, Pakistan</p>
+                <h6 class="testifier">Mike taylor</h6>
+                <p class="testifier_location">Lahore, Pakistan</p>
             </div>
         </div>
-        <div class="">
-            <img src="asset/Image3.svg" alt="">
-            <div class="">
-                <p class="">
+        <div class="testimonial_2">
+            <img src="asset/Image3.svg" alt="" class="testimonial_image">
+            <div class="testimonial">
+                <p class="testimonial_text">
                     “On the Windows talking painted pasture yet its express parties use. Sure last upon he same as knew next. Of believed or diverted no.”
                 </p>
-                <h6>Chris Thomasr</h6>
-                <p class="">Lahore, Pakistan</p>
+                <h6 class="testifier">Mike taylor</h6>
+                <p class="testifier_location">Lahore, Pakistan</p>
             </div>
         </div>
-        <div class="">
-            <img src="asset/Image3.svg" alt="">
-            <div class="">
-                <p class="">
-                    “On the Windows talking painted pasture yet its express parties use. Sure last upon he same as knew next. Of believed or diverted no.”
-                </p>
-                <h6>Precious Williams</h6>
-                <p class="">Akwa Ibom, Nigeria</p>
-            </div>
-        </div>
-        <div class="">
+       </div>
+        <div class="carousel">
             <img src="asset/Vector 2.svg" alt="">
             <img src="asset/Vector 3.svg" alt="">
         </div>
