--- a/Source/index.html
+++ b/Source/index.html
@@ -199,7 +199,7 @@
                 <p class="testimonial_text">
                     “On the Windows talking painted pasture yet its express parties use. Sure last upon he same as knew next. Of believed or diverted no.”
                 </p>
-                <h6 class="testifier">Mike taylor</h6>
+                <p class="testifier">Mike taylor</p>
                 <p class="testifier_location">Lahore, Pakistan</p>
             </div>
         </div>
@@ -210,22 +210,28 @@
         </div>
     </div>
     <div class="section_6">
-        <img src="asset/image 27.svg" alt="">
-        <img src="asset/image 28.svg" alt="">
-        <img src="asset/image 29.svg" alt="">
-        <img src="asset/image 30.svg" alt="">
-        <img src="asset/image 31.svg" alt="">
+        <img src="asset/image 27.svg" alt="" class="logos">
+        <img src="asset/image 28.svg" alt="" class="logos">
+        <img src="asset/image 29.svg" alt="" class="logos_3">
+        <img src="asset/image 30.svg" alt="" class="logos">
+        <img src="asset/image 31.svg" alt="" class="logos">
     </div>
+
+    <!--  -->
+
     <div class="section_7">
         <img src="asset/Group 77.svg" alt="">
         <div class="">
-            <h2>Subscribe to get information, latest news and other
+            <h2 class="subcribe_text">Subscribe to get information, latest news and other
                 interesting offers about Cobham</h2>
-            <input type="search" placeholder="Your Email">
-            <button>Subscribe</button>
+            <input type="search" placeholder="                Your Email" class="search">
+            <button class="subcribebtn">Subscribe</button>
         </div>
-        <img src="asset/Group 5.svg" alt="">
+        <!-- <img src="asset/Group 5.svg" alt="" class="elipse"> -->
     </div>
+
+    <!--  -->
+
     <footer class="">
         <div class="">
             <img src="asset/Jadoo..svg" alt="">
