--- a/Source/index.html
+++ b/Source/index.html
@@ -219,29 +219,33 @@
 
     <!--  -->
 
-    <div class="section_7">
-        <img src="asset/Group 77.svg" alt="">
+    <div class="section_7 subscribe">
+      <div class="subscribe">
+        <img src="asset/Group 77.svg" alt="" class="share">
         <div class="">
             <h2 class="subcribe_text">Subscribe to get information, latest news and other
                 interesting offers about Cobham</h2>
-            <input type="search" placeholder="                Your Email" class="search">
-            <button class="subcribebtn">Subscribe</button>
+            <form action="">
+                <input type="search" placeholder=" Your Email" class="search" required>
+                <button class="subcribebtn">Subscribe</button>
+            </form>
         </div>
-        <!-- <img src="asset/Group 5.svg" alt="" class="elipse"> -->
+      </div>
     </div>
 
     <!--  -->
 
-    <footer class="">
-        <div class="">
+    <footer>
+       <div class="footer">
+        <div class="companydesc">
             <img src="asset/Jadoo..svg" alt="">
-            <p class="">
+            <p class="footer_text">
                 Book your trip in minute, get full Control for much longer.
             </p>
         </div>
-       <div class="">
+       <div class="columns">
         <div class="">
-            <h3>Company</h3>
+            <h3  class="columns_header">Company</h3>
             <ul>
                 <li>About</li>
                 <li>Careers</li>
@@ -249,7 +253,7 @@
             </ul>
         </div>
         <div class="">
-            <h3>Contact</h3>
+            <h3 class="columns_header">Contact</h3>
             <ul>
                 <li>Help/FAQ</li>
                 <li>Press</li>
@@ -257,7 +261,7 @@
             </ul>
         </div>
         <div class="">
-            <h3>Company</h3>
+            <h3 class="columns_header">Company</h3>
             <ul>
                 <li>Airlinefees</li>
                 <li>Airline</li>
@@ -265,7 +269,7 @@
             </ul>
         </div>
        </div>
-       <div class="">
+       <div class="socials">
            <img src="asset/facebook.svg" alt="">
            <img src="asset/Instagram.svg" alt="">
            <img src="asset/twitter.svg" alt="">
@@ -275,7 +279,8 @@
                <img src="asset/Play Store.svg" alt="">
            </span>
        </div>
-       <h5>All rights reserved@Godsfavour.co</h5>
+       </div>
+       <h5 class="copyrights">All rights reserved@Godsfavour.co</h5>
     </footer>
 </body>
 </html>
