--- a/Source/index.html
+++ b/Source/index.html
@@ -144,7 +144,7 @@
             <img src="asset/Group 7.svg" alt="">
             <span>
                 <h6>Choose Destination</h6>      
-            <p class="">
+            <p class="value_text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna, tortor tempus. </p>
             </span>
            </div>
@@ -152,7 +152,7 @@
             <img src="asset/Group 12.svg" alt="">
             <span>
                 <h6>Make Payment</h6>      
-            <p class="">
+            <p class="value_text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna, tortor tempus. </p>
             </span>
            </div>
@@ -160,7 +160,7 @@
             <img src="asset/Group 11.svg" alt="">
             <span>
                 <h6>Reach Airport on Selected Date</h6>      
-            <p class="">
+            <p class="value_text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna, tortor tempus. </p>
             </span>
            </div>
@@ -226,7 +226,7 @@
             <h2 class="subcribe_text">Subscribe to get information, latest news and other
                 interesting offers about Cobham</h2>
             <form action="">
-                <input type="search" placeholder=" Your Email" class="search" required>
+                <input type="email" placeholder=" Your Email" class="search" required>
                 <button class="subcribebtn">Subscribe</button>
             </form>
         </div>
@@ -270,10 +270,12 @@
         </div>
        </div>
        <div class="socials">
-           <img src="asset/facebook.svg" alt="">
-           <img src="asset/Instagram.svg" alt="">
-           <img src="asset/twitter.svg" alt="">
-           <p class="">Discover our app</p>
+          <div class="">
+            <img src="asset/facebook.svg" alt="">
+            <img src="asset/Instagram.svg" alt="">
+            <img src="asset/twitter.svg" alt="">
+          </div>
+           <p class=" socials_header">Discover our app</p>
            <span class="">
                <img src="asset/Google Play.svg" alt="">
                <img src="asset/Play Store.svg" alt="">
